setup spring boot app

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,33 @@
-apply plugin: 'java'
-apply plugin: 'idea'
-
-repositories {
-    jcenter()
+buildscript {
+	repositories {
+		jcenter()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
+	}
 }
 
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+
+jar {
+	baseName = 'birthdays-when'
+	version =  '0.1-SNAPSHOT'
+}
+
+repositories {
+	jcenter()
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 dependencies {
-    testCompile 'junit:junit:4.12'
+	compileOnly 'org.projectlombok:lombok:1.16.10'
+
+	compile 'org.springframework.boot:spring-boot-starter-web'
+
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
+	testCompile 'junit:junit:4.12'
 }
