--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,7 @@ dependencies {
 	compile 'com.h2database:h2'
 
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
+	testCompile 'org.powermock:powermock-module-junit4:1.6.6'
+	testCompile 'org.powermock:powermock-api-mockito:1.6.6'
 	testCompile 'junit:junit:4.12'
 }
